--- a/css/paginaHome.css
+++ b/css/paginaHome.css
@@ -3,6 +3,7 @@ body {
     font-family: Nunito;
     padding-bottom: 50px;
     overflow-x: hidden;
+    text-decoration: none;
 }
 
 main{
@@ -171,7 +172,7 @@ main{
 
 .grafico{
     width: 89%;
-    background-color: rgba(0, 0, 0, 0.096);
+    background-color: rgba(0, 0, 0, 0.123);
     display: flex;
     justify-content: center;
     border-radius: 5px;
@@ -182,7 +183,7 @@ main{
     padding: 20px;
     border-radius: 20px;
     display: flex;
-    align-items: center;
+    align-items: center;    
     justify-content: center;
     margin: 20px auto;
 }
