--- a/css/navbar.css
+++ b/css/navbar.css
@@ -77,7 +77,7 @@ ul.navbar > a:hover::after{
 
 
 .botao-chat{
-    width: 130px;
+    width: 200px;
     height: 40px;
     background-color: var(--vermelho);
     color: var(--branco);
@@ -88,6 +88,11 @@ ul.navbar > a:hover::after{
     cursor: pointer;
     font-size: 20px;
     transition: all 0.2s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    gap: 5px;
 }
 
 
