--- a/css/viagens.css
+++ b/css/viagens.css
@@ -182,15 +182,20 @@ body {
     z-index: 1;
 }
 
+.botao{
+    border: 0px;
+    height: 220px;
+
+}
 .trip-card {
-    background-color: rgb(255, 255, 255);
+    background-color: #FFF9F0;
     padding: 15px;
     border: 2px solid #D92727;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
-    height: 220px;
+    height: 200px;
     position: relative;
     z-index: 1;
     cursor: pointer;
