--- a/css/cadastroveiculo.css
+++ b/css/cadastroveiculo.css
@@ -1,93 +1,157 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Nunito;
-  }
-  
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f5f5f5;
-  }
-  
-  .container {
-    display: flex;
-    max-width: 900px;
-    background-color: #fff;
-  }
-  
-  .form-container {
-    padding: 20px;
-    flex: 1;
-  }
-  
-  .back-button {
-    display: inline-block;
-    margin-bottom: 20px;
-    color: #333;
+body{
+    margin: 0; 
+    padding: 0; 
+    overflow: hidden; 
+    font-family: var(--texto);
     text-decoration: none;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    font-weight: bold;
-    color: #D92727;
-    margin-bottom: 5px;
-  }
-  
-  input[type="text"] {
+ } 
+ main{
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh;
     width: 100%;
-    padding: 8px;
-    border: none;
-    background-color: #eee;
-    border-bottom: 2px solid #D92727;
-  }
-  
-  .submit-button {
-    margin-top: 20px;
-    padding: 10px;
-    width: 100%;
-    background-color: #D92727;
-    color: #fff;
-    font-weight: bold;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-  }
-  
-  .info-container {
-    padding: 20px;
-    flex: 0.7;
-    background-color: #D92727;
-    color: #fff;
+    gap: 200px;
+ }
+ 
+ a{
+    text-decoration: none;
+    color: black;
+ }
+ 
+ .image-area{
+    height: 80%;
+    width: 25%;
+    background-color: var(--vermelho);
     display: flex;
     flex-direction: column;
+    padding: 39px;
     align-items: center;
+    color: var(--branco);
+    justify-content: space-between;
+ }
+ .tittle{
+    font-family: var(--titulo);
+    font-weight: 900;
+    font-size: 65px;
     text-align: center;
+ }
+ .text{
+    font-size: 30px;
+    text-align: center;
+    width: 500px;
+ }
+ .content-area{
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    gap: 120px;
+ }
+ .go-back{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+ }
+ .arow{
+    background-image: url(../css/img/seta-preta.png);
+    width: 18px;
+    height: 18px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+ }
+ .go-back h1{
+    font-family: var(--titulo);
+    font-weight: 900;
+    font-size: 20px;
+ }
+ .section-1{
+    display: flex;
+    gap: 50px;
+ }
+ 
+ 
+ .input-area p{
+    padding-bottom: 10px;
+    color: var(--vermelho);
+    font-size: 20px;
+    font-weight: 600;
+ }
+ 
+ 
+ .section-1 input{
+    width: 450px;
+ }
+ 
+ 
+ input{
+ height: 50px;
+ width: 965px;
+ border: none;
+ border-bottom: 2px solid var(--vermelho);
+ background-color: var(--cinza);
+ padding-left: 15px;
+ font-size: 18px;
+ outline: 0;
+ color: var(--preto);
+ }
+ 
+ 
+ .input-area{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+ }
+ .section-2{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+ }
+ 
+ 
+ .botao{
+    width: 223px;
+    height: 50px;
+    border-radius: 50px;
+    font-family: var(--titulo);
+    color: var(--vermelho);
+    font-size: 30px;
+    font-weight: 900;
+    background-color: transparent;
+    border: 2px solid var(--vermelho);
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1); 
+    cursor: pointer;
+ }
+ 
+ 
+ .botao:hover{
+    color: var(--branco);
+    background-color: var(--vermelho);
+    transform: translateY(-0.125em);
+ } 
+ .botao-area{
+    padding-top: 150px;
+ }
+
+
+ .error-message {
+    animation: fadeInOut 2s ease-in-out;
   }
   
-  .info-container h2 {
-    font-size: 28px;
-    margin-bottom: 10px;
-  }
-  
-  .info-container p {
-    font-size: 18px;
-    line-height: 1.9;
-    margin-bottom: 0px;
-    margin-top: 20%;
-  }
-  
-  .info-container img {
-    width: 200px;
-    height: auto;
-    margin-top: 10%;
+  @keyframes fadeInOut {
+    0% {
+      opacity: 0;
+    }
+    10% {
+      opacity: 1;
+    }
+    90% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
   
